[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ds-examples"
version = "0.1.0"
description = "Runnable Python examples of core data structures with tests and notes."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [ { name = "Project Maintainers" } ]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]
dependencies = []

[project.urls]
Homepage = "https://www.ambersartisanalknits.com"
Repository = "https://github.com/" # Will be set after creation

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
